updates to portfolio

--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
             <div class="split">
                 <div>
                     <p> I am a to-be web developer from Chicago, IL.
-                        Currently studying at Rutgers Coding Bootcamp;
-                        I have the intention and the motivation
+                        Currently studying with the intention and the motivation
                         to develop and reconfigure web programming. 
                     </p>
                     <p>    
                         Although I aspire to go higher with indulging the coding language
                         to the extent of learning other languages like python, C++, etc. and
                         get into different spectrum like software engineering, for now, my goal
-                        is to optimize my abilities and comprehension of the curriculum of this bootcamp.
+                        is to optimize my abilities and comprehension of web development.
                     </p>
+                    <p><a target = "_blank" href="./moreaboutme.html">More About Me</a></p>
                 </div>
             </div>
         </div>
@@ -59,8 +59,17 @@
                         <p></p>
                     </div>
                     <div>
-                        <a href="https://danchanyoungkim.github.io/Horiseon-Website-Refactoring-Update-1.0/" >
-                            <img class="app1" src="./assets/Images/app1.png" alt="Image of the website from 1st application"/> </a>
+                        <p class = "github-link">Project 1: <a target="_blank" href="https://github.com/danchanyoungkim/NBA-Team-Stats">NBA Team Stats Github Repo</a></p>
+                        <a target="_blank" href="https://danchanyoungkim.github.io/NBA-Team-Stats/" >
+                            <img class="app1" src="./assets/Images/NBATEAMSTAT.png" alt="Image of the website from NBA Team Stats"/></a>
+                        
+                        <p class = "github-link">Project 2: <a target="_blank" href="https://github.com/danchanyoungkim/Weather-Service-Website">Weather Service Github Repo</a></p>
+                        <a target="_blank" href="https://danchanyoungkim.github.io/Weather-Service-Website/" >
+                            <img class="app1" src="./assets/Images/Weather.png" alt="Image of the website from Weather service"/> </a>
+                        
+                        <p class = "github-link">Project 3: <a target="_blank" href="https://github.com/danchanyoungkim/Code-Quiz-Made-With-Code">Javascript Quiz Github Repo</a></p>
+                        <a target="_blank" href="https://danchanyoungkim.github.io/Code-Quiz-Made-With-Code/"" >
+                            <img class="app1" src="./assets/Images/Quiz.png" alt="Image of the website from Quiz"/> </a>    
                     </div>
                 </div>
             </div>
@@ -71,10 +80,10 @@
                 <div>
                     <div>
                         <h2 class="text-center">Contact Info</h2>
-                        <p>Name: <strong>Chan Young Kim (Dan)</strong></p>
                         <p>Email: <strong>danchanyoungkim@gmail.com</strong></p>
-                        <p>Phone #: <strong>224-531-9966</strong></p>
-                        <p>Alt Email: <strong>sunbeardankim@gmail.com</strong></p>
+                        <p>Github: <a target="_blank" href = "https://github.com/danchanyoungkim?tab=repositories"><strong>danchanyoungkim</strong></a></p>
+                        <p>Linkedin: <a target="_blank" href = "https://www.linkedin.com/in/dan-kim-190b65230/"><strong>Dan Kim</strong></a></p>
+                        <p>Resume: <a target="_blank" href = "./assets/Resume.pdf"><strong>Resume.pdf</strong></a></p>
                     </div>
                 </div>
             </div>
