changed url for project 1

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <p></p>
                     </div>
                     <div>
-                        <p class = "github-link">Project 1: <a target="_blank" href="https://github.com/Mwalbyy/group-3">PeripherAll Github Repo</a></p>
+                        <p class = "github-link">Project 1: <a target="_blank" href="https://github.com/Mwalbyy/peripherAll">PeripherAll Github Repo</a></p>
                         <a target="_blank" href="https://peripherall.herokuapp.com/" >
                             <img class="app1" src="./assets/Images/periperall.png" alt="Image of the website from PeripherAll service"/> </a>
                         
